@@ -172,6 +172,11 @@ class LuaContext {
     void run_enemy(Enemy& enemy);
     void run_custom_entity(CustomEntity& custom_entity);
 
+    void warning_deprecated(
+        const std::string& function_name,
+        const std::string& message
+    );
+
     // Lua refs.
     ScopedLuaRef create_ref();
     static void push_ref(lua_State* l, const ScopedLuaRef& ref);
@@ -1311,34 +1316,37 @@ class LuaContext {
       l_create_fire;
 
     // Script data.
-    lua_State* l;                   /**< The Lua state encapsulated. */
-    MainLoop& main_loop;            /**< The Solarus main loop. */
+    lua_State* l;                      /**< The Lua state encapsulated. */
+    MainLoop& main_loop;               /**< The Solarus main loop. */
 
-    std::list<LuaMenuData> menus;   /**< The menus currently running in their context.
-                                     * Invalid ones are to be removed at the next cycle. */
+    std::list<LuaMenuData> menus;      /**< The menus currently running in their context.
+                                        * Invalid ones are to be removed at the next cycle. */
     std::map<TimerPtr, LuaTimerData>
-        timers;                     /**< The timers currently running, with
-                                     * their context and callback. */
+        timers;                        /**< The timers currently running, with
+                                        * their context and callback. */
     std::list<TimerPtr>
-        timers_to_remove;           /**< Timers to be removed at the next cycle. */
+        timers_to_remove;              /**< Timers to be removed at the next cycle. */
 
     std::set<DrawablePtr>
-        drawables;                  /**< All drawable objects created by
-                                     * this script. */
+        drawables;                     /**< All drawable objects created by
+                                        * this script. */
     std::set<DrawablePtr>
-        drawables_to_remove;        /**< Drawable objects to be removed at the
-                                     * next cycle. */
+        drawables_to_remove;           /**< Drawable objects to be removed at the
+                                        * next cycle. */
     std::map<const ExportableToLua*, std::set<std::string>>
-        userdata_fields;            /**< Existing string keys created on each
-                                     * userdata with our __newindex. This is
-                                     * only for performance, to avoid Lua
-                                     * lookups for callbacks like on_update. */
+        userdata_fields;               /**< Existing string keys created on each
+                                        * userdata with our __newindex. This is
+                                        * only for performance, to avoid Lua
+                                        * lookups for callbacks like on_update. */
+    std::set<std::string>
+        warning_deprecated_functions;  /**< Names of deprecated functions of
+                                        * the API for which a warning was emitted. */
 
     static const std::map<EntityType, lua_CFunction>
-        entity_creation_functions;  /**< Creation function of each entity type. */
+        entity_creation_functions;     /**< Creation function of each entity type. */
     static std::map<lua_State*, LuaContext*>
-        lua_contexts;               /**< Mapping to get the encapsulating object
-                                     * from the lua_State pointer. */
+        lua_contexts;                  /**< Mapping to get the encapsulating object
+                                        * from the lua_State pointer. */
 
 };
 
