@@ -52,6 +52,8 @@ Changes that introduce incompatibilities:
 * Items with amount now have a default max amount of 1000 (#688).
 * Fix hero state name "freezed", renamed it to "frozen" (#813).
 * Fix map:get_entities() not returning the hero (#670).
+* map:get_camera_position() is now deprecated, use camera:get_position().
+* map:move_camera() is now deprecated, use a camera movement instead.
 * Fix entity:set_enabled(true) delayed while it blocks the hero (#817).
 * Fix brandished treasure sprite and shop treasure sprite not animated (#790).
 
